--- a/barbearia/gerenciador_horario/templates/form_agendamento.html
+++ b/barbearia/gerenciador_horario/templates/form_agendamento.html
@@ -1,22 +1,26 @@
-<form action="agendar/" method="post" class="flex flex-col gap-3 bg-white p-4 rounded shadow">
+<form id="form-agendamento" action="{% url 'agendar' %}" method="post" class="flex flex-col gap-3 bg-white p-4 rounded shadow">
     {% csrf_token %}
     {{ form.nome.label }}
     {{ form.nome }}
-    {{ form.telefone.label }}
+    <label for="{{ form.telefone.id_for_label }}">{{ form.telefone.label }}</label>
     {{ form.telefone }}
-    {{ form.telefone.errors }}
+    {% if form.telefone.errors %}
+      <div class="text-red-600 text-sm">
+        {{ form.telefone.errors }}
+      </div>
+    {% endif %}
     {{ form.dia_id }}
     {{ form.horario_id }}
     {{ form.hora_disponivel }}
   
     {% if messages %}
       <div class="mt-4">
-        {% for message in messages %}
-          <span>{{ form.telefone.errors }}</span>
-          <p class="text-{{ message.tags }}">{{ message }}</p>
-        {% endfor %}
+       {% for message in messages %}
+        <p class="text-{{ message.tags }}">{{ message }}</p>
+       {% endfor %}
       </div>
     {% endif %}
+
     
     <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">
       Confirmar Agendamento
